<resources>
    <string name="app_name">TVMazeSeriesApp</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="shows">Shows</string>
    <string name="people">People</string>
    <string name="genres">Genres</string>
    <string name="on_air">On air</string>
    <string name="at">At</string>
    <string name="episodes">Episodes</string>
    <string name="episode">Episode</string>
    <string name="season">Season</string>
    <string name="to_be_implemented">To be implemented…</string>
    <string name="no_information_available">No information available</string>
    <string name="participated_in">Participated in</string>
    <string name="gender">Gender</string>
    <string name="country">Country</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="filter_here">Filter Here</string>
    <string name="search_here">Search Here</string>
    <string name="there_are_no_results_to_be_show">There are no results to be show!</string>
</resources>