<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="person"
            type="com.iaz.tvmazeseriesapp.repository.model.Person" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_dark"
        android:orientation="vertical"
        tools:context=".view.persondetails.PersonDetailsFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_person_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_light"
            android:gravity="center"
            android:maxLines="2"
            android:padding="@dimen/margin_large"
            android:text="@{person.name}"
            android:textColor="@color/accent"
            android:textSize="@dimen/text_large"
            tools:text="Title" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_poster"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/poster_height"
                    android:layout_marginTop="@dimen/margin_extra"
                    android:adjustViewBounds="true"
                    android:paddingBottom="@dimen/margin_large"
                    android:scaleType="fitCenter"
                    android:src="@drawable/poster_placeholder"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:loadImage="@{person.image.medium}" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_person_gender_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_large"
                    android:text="@string/gender"
                    android:textColor="@color/accent"
                    android:textSize="@dimen/text_medium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_poster" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_person_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_large"
                    android:textColor="@color/accent"
                    android:textSize="@dimen/text_medium"
                    app:handleLoading="@{person.gender}"
                    app:layout_constraintStart_toEndOf="@+id/tv_person_country_label"
                    app:layout_constraintTop_toBottomOf="@id/iv_poster"
                    tools:text="Male" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_person_country_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_large"
                    android:text="@string/country"
                    android:textColor="@color/accent"
                    android:textSize="@dimen/text_medium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_person_gender" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_person_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_large"
                    android:textColor="@color/accent"
                    android:textSize="@dimen/text_medium"
                    app:handleLoading="@{person.country.name}"
                    app:layout_constraintStart_toEndOf="@+id/tv_person_country_label"
                    app:layout_constraintTop_toBottomOf="@id/tv_person_gender"
                    tools:text="United States" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_show_participated_in_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_large"
                    android:text="@string/participated_in"
                    android:textColor="@color/accent"
                    android:textSize="@dimen/text_medium"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_person_country"
                    tools:visibility="visible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_shows"
                    android:layout_width="@dimen/none"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginBottom="@dimen/margin_large"
                    android:clipToPadding="false"
                    android:overScrollMode="never"
                    android:padding="@dimen/margin_smallest"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_show_participated_in_label"
                    tools:listitem="@layout/item_show_basic" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>

</layout>